New simplified quickstart generator that does not depend on Maven classes. Look up JAVA_HOME if property java.home is not available. CLI's native image is now standalone with these changes. Still requires Java and Maven to run, but no additional jar files.